# fastapi-llm

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-push.yml
app/: main.py
app/core/: app.py  client.py  config.py  schemas.py  settings.py
tests/: test_main.py
