[tool.poetry]
name = "fastapi-llm"
version = "0.1.0"
description = "A FastAPI app to interact with LLMs in Bedrock"
authors = ["Scott Cronin <j.scott.cronin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
mypy = "^1.11.0"
ruff = "^0.5.0"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "D",   # flake8-docstrings
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]

[tool.ruff.format]
docstring-code-format = false

[tool.mypy]
exclude = ["^tests/"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
